Correccion total de errores de codigo y limpieza de css

--- a/contacto.html
+++ b/contacto.html
@@ -41,19 +41,6 @@
                     Registrarse
                 </a>
             </li>
-            <li id="user-menu-li" style="display: none;">
-                <div class="user-menu-container">
-                    <a href="#" class="user-toggle" onclick="toggleUserMenu(event)">
-                        <i class='bx bxs-user-circle'></i>
-                        <span id="nav-user-name">Usuario</span> <i class='bx bx-chevron-down'></i>
-                    </a>
-                    <div class="user-dropdown" id="userDropdown">
-                        <a href="perfil.php"><i class='bx bx-id-card'></i> Mi Perfil</a>
-                        <a href="configuracion.php"><i class='bx bx-cog'></i> Configuración</a>
-                        <a href="api/logout.php" style="color: #ff6b6b;"><i class='bx bx-log-out'></i> Cerrar Sesión</a>
-                    </div>
-                </div>
-            </li>
             <li>
                 <select id="language-selector" class="lang-select">
                     <option value="es">🇪🇸 ES</option>
@@ -110,17 +97,14 @@
     </main>
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
-
-            <p style="margin-top: 0.5rem; font-size: 0.9rem;">
-                <i class='bx bx-envelope'></i>
-                <a href="mailto:contact@securityshield.es"
-                    style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
-                    contact@securityshield.es
-                </a>
-            </p>
+            <p>&copy; 2026 SecurityShield - Proyecto PIM</p>
 
             <div class="social-links" style="display: flex; gap: 0.5rem; flex-wrap: wrap; justify-content: center;">
+
+                <a href="mailto:contact@securityshield.es" title="Enviar correo">
+                    <i class='bx bx-envelope'></i> Email
+                </a>
+
                 <a href="https://www.instagram.com/securityshield_/" target="_blank" rel="noopener noreferrer"
                     title="Instagram">
                     <i class='bx bxl-instagram'></i>
@@ -131,8 +115,8 @@
                 </a>
 
                 <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank"
-                    rel="noopener noreferrer" title="Ver código fuente en GitHub">
-                    <i class='bx bxl-github'></i> <span data-i18n="footer_source">Código Fuente</span>
+                    rel="noopener noreferrer" title="GitHub">
+                    <i class='bx bxl-github'></i>
                 </a>
             </div>
         </div>
