--- a/pasarela.html
+++ b/pasarela.html
@@ -147,17 +147,14 @@
     </div>
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
-
-            <p style="margin-top: 0.5rem; font-size: 0.9rem;">
-                <i class='bx bx-envelope'></i>
-                <a href="mailto:contact@securityshield.es"
-                    style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
-                    contact@securityshield.es
-                </a>
-            </p>
+            <p>&copy; 2026 SecurityShield - Proyecto PIM</p>
 
             <div class="social-links" style="display: flex; gap: 0.5rem; flex-wrap: wrap; justify-content: center;">
+
+                <a href="mailto:contact@securityshield.es" title="Enviar correo">
+                    <i class='bx bx-envelope'></i> Email
+                </a>
+
                 <a href="https://www.instagram.com/securityshield_/" target="_blank" rel="noopener noreferrer"
                     title="Instagram">
                     <i class='bx bxl-instagram'></i>
@@ -168,8 +165,8 @@
                 </a>
 
                 <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank"
-                    rel="noopener noreferrer" title="Ver código fuente en GitHub">
-                    <i class='bx bxl-github'></i> <span data-i18n="footer_source">Código Fuente</span>
+                    rel="noopener noreferrer" title="GitHub">
+                    <i class='bx bxl-github'></i>
                 </a>
             </div>
         </div>
