--- a/login.html
+++ b/login.html
@@ -40,8 +40,10 @@
             </form>
 
             <div style="margin-top: 1.5rem; text-align: center;">
-                <p style="color: #94a3b8; font-size: 0.9rem;">¿No tienes cuenta?</p>
-                <a href="registro.html" style="color: #38bdf8; text-decoration: none;">Regístrate aquí</a>
+                <p style="color: #94a3b8; font-size: 0.9rem;"><span data-i18n="text_no_account">¿No tienes
+                        cuenta?</span></p>
+                <a href="registro.html" style="color: #38bdf8; text-decoration: none;"
+                    data-i18n="link_register_action">Regístrate aquí</a>
             </div>
         </div>
     </div>
