--- a/contacto.html
+++ b/contacto.html
@@ -27,6 +27,29 @@
 
 <body>
 
+    <script>
+        (function () {
+            // 1. Recuperar tema guardado
+            const tema = localStorage.getItem('user_theme');
+            const body = document.body;
+
+            // 2. Bloquear animaciones para que no haya 'fundido'
+            body.classList.add('preload');
+
+            // 3. Aplicar color de fondo INSTANTÁNEAMENTE
+            if (tema === 'light') {
+                body.classList.add('theme-light');
+            } else if (tema === 'dark') {
+                body.classList.add('theme-dark');
+            }
+
+            // 4. Reactivar animaciones tras un breve momento
+            setTimeout(() => {
+                body.classList.remove('preload');
+            }, 200);
+        })();
+    </script>
+
     <nav class="navbar">
         <div class="logo"><i class='bx bxs-shield-plus'></i> SecurityShield</div>
         <div class="menu-toggle" id="mobile-menu"><i class='bx bx-menu'></i></div>
