--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         content="Protege tu infraestructura con bastionado avanzado, perfiles AppArmor y auditoría profesional.">
     <meta property="twitter:image" content="https://www.securityshield.es/images/social-preview.jpg">
 
-    <link rel="icon" href="https://www.securityshield.es/images/google.jpg" type="image/jpeg">
-    <link rel="apple-touch-icon" href="https://www.securityshield.es/images/google.jpg">
+    <link rel="icon" href="images/google.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="images/google.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
