--- a/principal.html
+++ b/principal.html
@@ -22,7 +22,7 @@
     <meta property="twitter:description"
         content="Auditoría de sistemas, Hardening con AppArmor y defensa en profundidad.">
     <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
-    <link rel="icon" type="image/jpg" href="https://securityshield.es/images/shield_g.jpg">
+    <link rel="icon" type="image/jpg" href="images/shield_g.jpg">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://securityshield.es/">
