Actualizacio footer + gem personalizado

--- a/principal.html
+++ b/principal.html
@@ -132,6 +132,11 @@
                     <i class='bx bx-envelope'></i> Email
                 </a>
 
+                <a href="https://gemini.google.com/gem/1YTeuh1x1zmtDcu17j-3S1yLJLdXN3juP?usp=sharing" target="_blank"
+                    rel="noopener noreferrer" title="Asistente Gemini">
+                    <i class='bx bx-bot'></i>
+                </a>
+
                 <a href="https://www.instagram.com/securityshield_/" target="_blank" rel="noopener noreferrer"
                     title="Instagram">
                     <i class='bx bxl-instagram'></i>
