--- a/pasarela.html
+++ b/pasarela.html
@@ -67,7 +67,6 @@
     </style>
     <script src="js/theme.js" defer></script>
     <script>
-        // VERIFICACIÓN DE SEGURIDAD
         fetch('/api/check_session.php')
             .then(response => response.json())
             .then(data => {
@@ -86,21 +85,17 @@
 
     <script>
         (function () {
-            // 1. Recuperar tema guardado
             const tema = localStorage.getItem('user_theme');
             const body = document.body;
 
-            // 2. Bloquear animaciones para que no haya 'fundido'
             body.classList.add('preload');
 
-            // 3. Aplicar color de fondo INSTANTÁNEAMENTE
             if (tema === 'light') {
                 body.classList.add('theme-light');
             } else if (tema === 'dark') {
                 body.classList.add('theme-dark');
             }
 
-            // 4. Reactivar animaciones tras un breve momento
             setTimeout(() => {
                 body.classList.remove('preload');
             }, 200);
@@ -200,49 +195,71 @@
             </div>
         </div>
     </footer>
-    <div id="techInfoModal" class="modal-overlay" style="display: none;">
+    <div id="techInfoModal" class="modal-overlay">
         <div class="modal-content">
-            <h3 data-i18n="modal_tech_title">Configuración del Entorno</h3>
-            <p data-i18n="modal_tech_desc">Para prepararte el script de instalación, necesitamos unos datos básicos de
-                tu servidor o máquina.</p>
+            <div class="modal-header">
+                <div style="font-size: 3rem; color: #6366f1; margin-bottom: 10px;">
+                    <i class='bx bx-server'></i>
+                </div>
+                <h3 data-i18n="modal_tech_title">Configuración del Entorno</h3>
+                <p data-i18n="modal_tech_desc">Necesitamos estos datos para preparar tu script de instalación
+                    personalizado.</p>
+            </div>
 
             <form id="techForm">
-                <div class="form-group">
-                    <label data-i18n="lbl_client_name">Nombre (Cliente o Empresa)</label>
-                    <input type="text" id="clientName" required placeholder="Ej: TechSolutions SL">
+                <div class="input-group">
+                    <label data-i18n="lbl_client_name">Nombre del Proyecto / Cliente</label>
+                    <div class="input-wrapper">
+                        <i class='bx bx-briefcase-alt-2'></i>
+                        <input type="text" id="clientName" class="styled-input" required
+                            placeholder="Ej: TechSolutions SL">
+                    </div>
                 </div>
 
-                <div class="form-group">
-                    <label data-i18n="lbl_os">Sistema Operativo</label>
-                    <select id="clientOS" required>
-                        <option value="" data-i18n="ph_os">Selecciona tu SO...</option>
-                        <option value="ubuntu">Ubuntu / Debian</option>
-                        <option value="centos">CentOS / RHEL</option>
-                        <option value="windows">Windows Server</option>
-                        <option value="macos">macOS</option>
-                        <option value="otro">Otro</option>
-                    </select>
+                <div class="row-grid">
+                    <div class="input-group">
+                        <label data-i18n="lbl_os">Sistema Operativo</label>
+                        <div class="input-wrapper">
+                            <i class='bx bxl-tux'></i>
+                            <select id="clientOS" class="styled-select" required>
+                                <option value="" disabled selected>Elige SO...</option>
+                                <option value="ubuntu">Ubuntu / Debian</option>
+                                <option value="centos">CentOS / RHEL</option>
+                                <option value="windows">Windows Server</option>
+                                <option value="macos">macOS</option>
+                                <option value="otro">Otro</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="input-group">
+                        <label data-i18n="lbl_arch">Arquitectura</label>
+                        <div class="input-wrapper">
+                            <i class='bx bx-microchip'></i>
+                            <select id="clientArch" class="styled-select" required>
+                                <option value="" disabled selected>CPU...</option>
+                                <option value="x86_64">x86_64 (64-bit)</option>
+                                <option value="arm64">ARM64 (Apple/AWS)</option>
+                                <option value="x86">x86 (32-bit)</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="form-group">
-                    <label data-i18n="lbl_arch">Arquitectura</label>
-                    <select id="clientArch" required>
-                        <option value="" data-i18n="ph_arch">Selecciona arquitectura...</option>
-                        <option value="x86_64">x86_64 (Intel/AMD 64-bit)</option>
-                        <option value="arm64">ARM64 (Apple Silicon, AWS Graviton)</option>
-                        <option value="x86">x86 (32-bit)</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label>Email de Contacto (para envío de scripts)</label>
-                    <input type="email" id="clientEmail" required placeholder="admin@tuequipo.com">
+                <div class="input-group">
+                    <label>Cuenta Vinculada <span style="font-size:0.7em; opacity:0.7;">(No editable)</span></label>
+                    <div class="input-wrapper">
+                        <i class='bx bxs-lock-alt' style="color: #6366f1;"></i> <input type="email" id="clientEmail"
+                            class="styled-input" readonly>
+                    </div>
                 </div>
 
                 <div class="modal-buttons">
                     <button type="button" class="btn-cancel" onclick="closeTechModal()"
                         data-i18n="btn_cancel">Cancelar</button>
-                    <button type="submit" class="btn-confirm" data-i18n="btn_confirm_pay">Confirmar y Pagar</button>
+                    <button type="submit" class="btn-confirm" data-i18n="btn_confirm_pay">
+                        <i class='bx bx-check-circle' style="margin-right:5px;"></i> Confirmar y Pagar
+                    </button>
                 </div>
             </form>
         </div>
