--- a/pasarela.html
+++ b/pasarela.html
@@ -245,11 +245,11 @@
 
                     <div class="card-footer">
                         <div>
-                            <div style="font-size: 0.6rem; opacity: 0.7;">TITULAR</div>
+                            <div style="font-size: 0.6rem; opacity: 0.7;" data-i18n="lbl_card_holder">TITULAR</div>
                             <div class="card-holder" id="cardVisualHolder">USUARIO REGISTRADO</div>
                         </div>
                         <div style="text-align: right;">
-                            <div style="font-size: 0.6rem; opacity: 0.7;">EXPIRA</div>
+                            <div style="font-size: 0.6rem; opacity: 0.7;" data-i18n="lbl_card_expire">EXPIRA</div>
                             <span id="cardVisualDate">MM/YY</span>
                         </div>
                     </div>
@@ -367,7 +367,8 @@
                 </div>
 
                 <div class="input-group">
-                    <label>Cuenta Vinculada <span style="font-size:0.7em; opacity:0.7;">(No editable)</span></label>
+                    <label data-i18n="lbl_linked_account">Cuenta Vinculada <span
+                            style="font-size:0.7em; opacity:0.7;">(No editable)</span></label>
                     <div class="input-wrapper">
                         <i class='bx bxs-lock-alt' style="color: #6366f1;"></i>
                         <input type="email" id="clientEmail" class="styled-input" readonly>
