--- a/planes.html
+++ b/planes.html
@@ -57,10 +57,11 @@
             <li><a href="principal" data-i18n="nav_inicio">Inicio</a></li>
             <li><a href="planes" class="active" data-i18n="nav_planes">Planes</a></li>
             <li><a href="contacto" data-i18n="nav_contacto">Contacto</a></li>
-            <li><a href="login" style="font-weight: 600;">Iniciar Sesión</a></li>
+            <li><a href="login.html" style="font-weight: 600;" data-i18n="nav_item_login">Iniciar Sesión</a></li>
             <li>
                 <a href="registro.html" class="btn-login"
-                    style="background: var(--primary); color: #000; padding: 0.5rem 1rem; border-radius: 50px;">
+                    style="background: var(--primary); color: #000; padding: 0.5rem 1rem; border-radius: 50px;"
+                    data-i18n="nav_item_register">
                     Registrarse
                 </a>
             </li>
