Añadiendo funcionalidades captcha

--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/jpg" href="images/shield_g.jpg">
     <script src="js/theme.js" defer></script>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 
 <body>
@@ -64,7 +65,8 @@
                     <label data-i18n="lbl_pass">Contraseña</label>
                     <input type="password" name="password" class="form-input" placeholder="••••••••" required>
                 </div>
-
+                <div class="cf-turnstile" data-sitekey="0x4AAAAAACdSVnb5hN7HV1CF" data-theme="auto"></div>
+                <br>
                 <button type="submit" class="btn-login" style="width:100%; margin-top:1rem; cursor: pointer;">
                     <span data-i18n="btn_enter">Entrar</span>
                 </button>
