--- a/registro.html
+++ b/registro.html
@@ -82,7 +82,13 @@
 
                 <div class="form-group">
                     <label data-i18n="lbl_pass">Contraseña</label>
-                    <input type="password" name="password" class="form-input" placeholder="••••••••" required>
+                    <input type="password" id="pass1" name="password" class="form-input" placeholder="••••••••"
+                        required>
+                </div>
+
+                <div class="form-group">
+                    <label>Confirmar Contraseña</label> <input type="password" id="pass2" name="password_confirm"
+                        class="form-input" placeholder="••••••••" required>
                 </div>
                 <div class="cf-turnstile" data-sitekey="0x4AAAAAACdSVnb5hN7HV1CF" data-theme="auto"></div>
                 <br>
@@ -130,6 +136,17 @@
         </div>
     </footer>
     <script src="js/translations.js"></script>
+    <script>
+        document.querySelector('form').addEventListener('submit', function (e) {
+            var p1 = document.getElementById('pass1').value;
+            var p2 = document.getElementById('pass2').value;
+
+            if (p1 !== p2) {
+                e.preventDefault(); // Detiene el envío
+                alert('¡Las contraseñas no coinciden!');
+            }
+        });
+    </script>
 </body>
 
 </html>
